<resources>
    <string name="ADDRESS_LINE_1_label">Street address, line 1</string>
    <string name="ADDRESS_LINE_2_label">Street address, line 2</string>
    <string name="ADDRESS_LINE_3_label">Street address, line 3</string>
    <string name="BALANCE_label">Balance</string>
    <string name="BIRTHDAY_label">Date of birth</string>
    <string name="BIRTH_MONTH_AND_DAY_label">Date of birth</string>
    <string name="CARD_BARCODE_label">Barcode</string>
    <string name="CARD_NUMBER_label">Member ID</string>
    <string name="CITY_label">City</string>
    <string name="COUNTRY_label">County</string>
    <string name="EMAIL_ADDRESS_label">Email</string>
    <string name="EVENT_NUMBER_label">Event number</string>
    <string name="FIRST_NAME_label">First name</string>
    <string name="GENDER_label">Gender</string>
    <string name="HceServiceDescription">Google Pay</string>
    <string name="LAST_NAME_label">Last name</string>
    <string name="MERCHANT_NAME_label">Merchant</string>
    <string name="NOTES_label">Your notes</string>
    <string name="PHONE_NUMBER_label">Phone number</string>
    <string name="PIN_label">PIN</string>
    <string name="PROGRAM_NAME_label">Program</string>
    <string name="PROMPT_UNKNOWN_label" />
    <string name="STATE_label">State</string>
    <string name="STREET_ADDRESS_label">Street address</string>
    <string name="TransitAidGroupDescription">Google Pay Transit Application Ids</string>
    <string name="ZIPCODE_label">ZIP code</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_software_notices_label">Software Notices</string>
    <string name="accessibility_button">button</string>
    <string name="accessibility_checked">checked</string>
    <string name="accessibility_not_checked">not checked</string>
    <string name="account_item">Switch to %1$s</string>
    <string name="account_item_default">Switch account</string>
    <string name="account_number_credit_explanation">This credit was issued by %1$s</string>
    <string name="account_number_explanation">A virtual %1$s account ending in %2$s was used instead of your actual card number to make this purchase</string>
    <string name="account_number_explanation_no_last_digits">A virtual %1$s account was used instead of your actual card number to make this purchase</string>
    <string name="account_number_explanation_no_last_digits_paypal">A virtual account was used to make this purchase</string>
    <string name="account_number_explanation_no_network">A virtual account ending in %1$s was used instead of your actual card number to make this purchase</string>
    <string name="account_number_explanation_no_network_no_last_digits">A virtual account was used instead of your actual card number to make this purchase</string>
    <string name="account_number_explanation_non_google_pay">"This purchase either wasn't made with Google Pay or was made using another device. You have it set so that all purchases made with this card show in your app. Go to %1$s."</string>
    <string name="account_number_explanation_non_google_pay_paypal">"This purchase either wasn't made with Google Pay or was made using another device. You have it set so that all your PayPal purchases show in your app. Go to %1$s."</string>
    <string name="account_number_explanation_non_google_pay_phase2">"The settings for this card allow all activity to appear here. These include transactions, like this one, that weren't made with your device or Google Pay. To change these settings, go to the card detail view in the app."</string>
    <string name="account_number_explanation_paypal">A virtual account ending in %2$s was used to make this purchase</string>
    <string name="account_number_refund_explanation">A virtual %1$s account ending in %2$s was used instead of your actual card number to issue this refund</string>
    <string name="account_number_refund_explanation_no_last_digits">A virtual %1$s account was used instead of your actual card number to issue this refund</string>
    <string name="account_number_refund_explanation_no_last_digits_paypal">A virtual account was used to issue this refund</string>
    <string name="account_number_refund_explanation_no_network">A virtual account ending in %1$s was used instead of your actual card number to issue this refund</string>
    <string name="account_number_refund_explanation_no_network_no_last_digits">A virtual account was used instead of your actual card number to issue this refund</string>
    <string name="account_number_refund_explanation_non_google_pay">"This refund is for a purchase that either wasn't made with Google Pay or was made using another device. You have it set so that all purchases made with this card show in your app. Go to %1$s."</string>
    <string name="account_number_refund_explanation_non_google_pay_paypal">"This refund is for a purchase that either wasn't made with Google Pay or was made using another device. You have it set so that all your PayPal purchases show in your app. Go to %1$s."</string>
    <string name="account_number_refund_explanation_paypal">A virtual account ending in %2$s was used to issue this refund</string>
    <string name="account_number_title_format">%1$s number</string>
    <string name="account_selector_description">account selector, %1$s</string>
    <string name="account_selector_description_no_account">account selector</string>
    <string name="action_add_bank_account">Bank account</string>
    <string name="action_add_gift_card">Gift card</string>
    <string name="action_add_loyalty_program">Loyalty program</string>
    <string name="action_add_pass">Pass</string>
    <string name="action_add_payment_card">Credit or debit card</string>
    <string name="action_add_payment_method">Payment method</string>
    <string name="action_add_paypal_account">PayPal</string>
    <string name="action_add_se_payment_card">E-money</string>
    <string name="action_add_transit_card">Transit card</string>
    <string name="action_add_visa_checkout">Visa Checkout</string>
    <string name="action_needed">Action Needed</string>
    <string name="action_send_request">Send or request</string>
    <string name="activate_ticket_button_label">Activate</string>
    <string name="activate_transit_ticket_label">Activate %1$s</string>
    <string name="add_account">Add account</string>
    <string name="add_button_memo">Add Note</string>
    <string name="add_card_error_title">Oops…</string>
    <string name="add_card_limit_exceeded_details">"Can't add more than one active %1$s card on this device"</string>
    <string name="add_card_limit_exceeded_title">%1$s card limit exceeded</string>
    <string name="add_emoney_generic_error_message">Please try again later</string>
    <string name="add_emoney_generic_error_title_format">"Couldn't create %1$s card"</string>
    <string name="add_emoney_google_support_link">Google Support</string>
    <string name="add_emoney_sanction_error_message">"The sign-up process couldn't be completed. Contact %1$s for help."</string>
    <string name="add_emoney_sanction_error_title_format">"Couldn't create %1$s card"</string>
    <string name="add_emoney_title">Add e-money</string>
    <string name="add_emoney_unsupported_device_error_title_format">%1$s does not support this device yet. Try again in a few days.</string>
    <string name="add_gift_cards_error_message">There was an error adding your gift card to Google Pay. Please try again later.</string>
    <string name="add_loyalty_card_error_message">There was an error adding your loyalty card to Google Pay. Please try again later.</string>
    <string name="add_payment_instrument_button_label">Add credit or debit card</string>
    <string name="add_payment_method_add_button">Add payment method</string>
    <string name="add_payment_method_body">"Add a payment method and you'll be ready to receive money"</string>
    <string name="add_payment_method_other_button">Other options</string>
    <string name="add_payment_method_title">"Let's get you set up"</string>
    <string name="add_to_balance_label">Add to balance:</string>
    <string name="add_to_get_started_title">Add to get started</string>
    <string name="application_name">Google Pay</string>
    <string name="auto_redeem_setting_message">Hold near terminal to use</string>
    <string name="barcode_number">Barcode Number</string>
    <string name="boarding_time_alert_description">Alert icon for boarding time</string>
    <string name="boarding_time_label">Boarding</string>
    <string name="close_button_description">Close</string>
    <string name="confirmation_number_label">Confirmation Number</string>
    <string name="e_ticket_number_label">Ticket Number</string>
    <string name="flight_boarding_time_title">Boarding</string>
    <string name="flight_gate_title">Gate</string>
    <string name="flight_number_title_default">Flight #</string>
    <string name="flight_terminal_title">Terminal</string>
    <string name="flyer_number_label">Frequent Flyer Number</string>
    <string name="funds_transferred">Funds transferred by Google Payment Corp</string>
    <string name="gate_closes_time_label">Gate Closes</string>
    <string name="growth_add_a_card">Add a card</string>
    <string name="growth_add_a_payment_method">Add a payment method to speed through checkout in stores, in apps, and on the web</string>
    <string name="growth_add_your_paypal_account">Add your PayPal account</string>
    <string name="growth_lets_get_you_set_up">"Let's get you set up"</string>
    <string name="linked_phone_title">Linked phone number</string>
    <string name="merchant_logo_description">The logo for the merchant or issuer of this item</string>
    <string name="offer_details_header">Details</string>
    <string name="offer_provider_header">From</string>
    <string name="offer_terms_header">Terms</string>
    <string name="overflow_button_description">More options</string>
    <string name="p2p_fingerprint_switch_title">Fingerprint</string>
    <string name="p2p_pin_required_switch_description">Use your Google Account PIN or fingerprint to confirm every time you send money</string>
    <string name="p2p_pin_required_switch_title">Require a confirmation</string>
    <string name="privacy_notice">Privacy Notice</string>
    <string name="sending_money_heading">Sending Money with Google Pay</string>
    <string name="show_barcode">Show code</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="update_button_text">Update</string>
    <string name="use_by_label">Expires</string>
</resources>