<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar android:id="@id/Toolbar" style="@style/Toolbar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/settings_divider" android:showDividers="middle">
            <com.google.commerce.tapandpay.android.settings.widgets.SettingSwitch android:id="@id/p2p_pin_required_switch" android:title="@string/p2p_pin_required_switch_title" android:summary="@string/p2p_pin_required_switch_description" style="@style/SettingSwitchStyle" />
            <com.google.commerce.tapandpay.android.settings.widgets.SettingSwitch android:id="@id/p2p_fingerprint_required_switch" android:title="@string/p2p_fingerprint_switch_title" style="@style/SettingSwitchStyle" />
            <com.google.commerce.tapandpay.android.settings.widgets.SettingSwitch android:id="@id/link_phone_number_switch" android:visibility="gone" android:title="@string/linked_phone_title" style="@style/SettingSwitchStyle" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>