<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/CloseIcon" android:padding="8.0dip" android:layout_width="@dimen/minimum_touch_target" android:layout_height="@dimen/minimum_touch_target" android:contentDescription="@string/close_button_description" android:layout_alignParentStart="true" />
    <ImageView android:id="@id/MerchantLogo" android:layout_width="@dimen/card_header_compact_logo_size" android:layout_height="@dimen/card_header_compact_logo_size" android:layout_marginTop="12.0dip" android:layout_centerHorizontal="true" android:contentDescription="@string/merchant_logo_description" />
    <ImageView android:id="@id/OverflowIcon" android:padding="8.0dip" android:layout_width="@dimen/minimum_touch_target" android:layout_height="@dimen/minimum_touch_target" android:contentDescription="@string/overflow_button_description" android:layout_alignParentEnd="true" />
</RelativeLayout>