<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:id="@id/DetailsFragmentContent" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.commerce.tapandpay.android.valuable.activity.widget.HeaderCardView android:id="@id/HeaderCard" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/SmarttapLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <include layout="@layout/card_nfc_info_view" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/MessagesLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/Expiration" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/use_by_label" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/BarcodeNumber" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/barcode_number" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/Details" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/offer_details_header" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/Terms" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/offer_terms_header" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/Provider" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/offer_provider_header" />
        </LinearLayout>
        <com.google.commerce.tapandpay.android.widgets.componentlayouts.MainImageLayout android:id="@id/MainImageLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/AdditionalMessagesLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/IssuerMessagesLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/LinksLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/SwitchesLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.commerce.tapandpay.android.valuable.activity.widget.SwitchView android:id="@id/AutoRedemptionSwitch" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:switch_summary="@string/auto_redeem_setting_message" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ButtonsLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.ButtonView android:id="@id/ShowBarcodeButton" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:text="@string/show_barcode" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>