<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:id="@id/DetailsFragmentContent" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.commerce.tapandpay.android.valuable.activity.widget.HeaderCardView android:id="@id/HeaderCard" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.google.commerce.tapandpay.android.valuable.activity.widget.GoogleFlightStatusCardView android:id="@id/GoogleFlightStatusCard" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/SmarttapLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <include layout="@layout/card_nfc_info_view" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/MessagesLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/BoardingPosition" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/SeatClass" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/SequenceNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/BoardingDoor" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/ConfirmationNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/confirmation_number_label" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/ETicketNumberView" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/e_ticket_number_label" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/FlyerNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/flyer_number_label" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/BoardingTime" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/boarding_time_label" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/GateClosesTime" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/gate_closes_time_label" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/DepartureTime" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/ArrivalTime" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/ArrivalTerminalAndGate" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.MessageView android:id="@id/BarcodeNumber" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:header="@string/barcode_number" />
        </LinearLayout>
        <com.google.commerce.tapandpay.android.widgets.componentlayouts.MainImageLayout android:id="@id/MainImageLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/AdditionalMessagesLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/IssuerMessagesLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/LinksLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/SwitchesLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.commerce.tapandpay.android.valuable.activity.widget.SwitchView android:id="@id/AutoRedemptionSwitch" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:switch_summary="@string/auto_redeem_setting_message" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ButtonsLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.commerce.tapandpay.android.widgets.componentlayouts.ButtonView android:id="@id/ShowBarcodeButton" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:text="@string/show_barcode" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>