<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/Content" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton android:id="@id/CloseButton" android:padding="@dimen/default_spacing" android:layout_width="wrap_content" android:layout_height="56.0dip" android:src="@drawable/quantum_ic_close_black_24" android:contentDescription="@string/close_button_description" style="@style/ClickableButton" />
    <LinearLayout android:orientation="vertical" android:id="@id/ContentViewForTesting" android:paddingTop="56.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true" android:paddingStart="24.0dip" android:paddingEnd="24.0dip">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="24.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:src="@drawable/gpay_logo_small" />
        <TextView android:textAppearance="@style/Text_Headline" android:layout_gravity="center_horizontal" android:id="@id/Title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="8.0dip" android:text="@string/growth_lets_get_you_set_up" />
        <TextView android:textAppearance="@style/Text_Body" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/Body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/growth_add_a_payment_method" android:lineSpacingMultiplier="1.2" />
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="5.0">
            <Space android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
            <ImageView android:id="@id/MainImage" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/card_204x204" android:scaleType="fitCenter" android:layout_weight="6.0" android:contentDescription="@null" />
            <com.airbnb.lottie.LottieAnimationView android:id="@id/Animation" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="6.0" android:contentDescription="@null" />
            <Space android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <android.support.design.button.MaterialButton android:layout_gravity="center_horizontal" android:id="@id/PrimaryButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/growth_add_a_card" style="@style/Widget.GoogleMaterial.Button" />
        <android.support.design.button.MaterialButton android:layout_gravity="center_horizontal" android:id="@id/SecondaryButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/growth_add_your_paypal_account" style="@style/Widget.GoogleMaterial.TextButton" />
    </LinearLayout>
</FrameLayout>